# read_source

./: .gitignore  pyproject.toml  readme.md
read_source/: __init__.py
tests/: conftest.py
tests/source/ascii/: dash-star-dash.py  equal.py  plain_text.py  vim_style_1.py
tests/source/gb18030/: dash-star-dash.py  equal.py  plain_text.py  vim_style_1.py
tests/source/gb2312/: dash-star-dash.py  equal.py  plain_text.py  vim_style_1.py
tests/source/gbk/: dash-star-dash.py  plain_text.py  vim_style_1.py
tests/source/latin-1/: dash-star-dash.py  equal.py  plain_text.py  vim_style_1.py
tests/source/template/: dash-star-dash.py  equal.py  plain_text.py  vim_style_1.py
tests/source/utf-8/: no-encoding.py  plain_text.py
