[tool.poetry]
name = "read_source"
version = "0.0.1"
description = ""
authors = ["Trim21 <i@trim21.me>"]
readme = 'readme.md'

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
yapf = "^0.28.0"
jinja2 = "^2.10"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
